--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "antd": "^4.16.13",
+    "antd": "^4.17.3",
     "i18next": "^21.0.2",
     "i18next-browser-languagedetector": "^6.1.2",
     "react": "^17.0.2",
@@ -21,7 +21,7 @@
     "react-i18next": "^11.12.0",
     "react-promise-tracker": "^2.1.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
