feat: store path alias

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -8,7 +8,8 @@
       "&assets/*": ["./src/assets/*"],
       "&route/*": ["./src/route/*"],
       "&locales/*": ["./src/locales/*"],
-      "&utils/*": ["./src/utils/*"]
+      "&utils/*": ["./src/utils/*"],
+      "&store/*": ["./src/store/*"]
     }
   }
 }
