--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,14 +15,20 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "antd": "^4.17.3",
+    "axios": "^0.24.0",
+    "history": "4.10.1",
     "i18next": "^21.0.2",
     "i18next-browser-languagedetector": "^6.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.12.0",
     "react-promise-tracker": "^2.1.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "redux": "^4.1.2",
+    "redux-first-history": "^5.0.7",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
